--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.21.2",
     "axios": "^1.6.5",
     "i": "^0.3.7",
     "npm": "^10.8.1",
@@ -20,6 +21,7 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
+    "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
